@startuml
'https://plantuml.com/class-diagram
hide circle
class DeviceRepository <<interface>>
class UserRepository <<interface>>
class SubscriptionRepository <<interface>>


class Device{
    -macAddress
    -name
    -description
}
class DeviceViewMapper{
    +toDevicesView(Iterable<Device> devices): Iterable<DeviceView>
}
class DeviceController{
    findAllDevicesByUser(): Iterable<DeviceView>
    }
class DeviceService{
 +findAllDevicesByUser(): List<Device>

}

interface DeviceRepository
{
+findAllBySubscription(Subscriptions subscription): List<Device>
}

interface UserRepository
{
+findById(Long objectId): Optional<User>
}

interface SubscriptionRepository
{
+findByUser(User user): Optional<Subscriptions>
}


DeviceController ..> DeviceService: uses >
DeviceService ..> DeviceRepository: uses >
DeviceService ..> UserRepository: uses >
DeviceService ..> SubscriptionRepository: uses >
DeviceRepository ..> Device: < record
DeviceController ..>DeviceViewMapper: uses >
@enduml
